<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>TampaTest</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
       <!-- <defaultSuiteFiles>testsuites/testNG.xml</defaultSuiteFiles>-->
        <suiteXmlFile>testsuites/testNG.xml</suiteXmlFile>
    </properties>

    <dependencies>




        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.14.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
        <dependency> <!--for random string in utility to generate random emails etc-->
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.141.59</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.sf.opencsv/opencsv -->
        <dependency>  <!--opencsv allows to read csv files-->
            <groupId>net.sf.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>2.3</version>
        </dependency>



        <!-- https://logging.apache.org/log4j/2.x/maven-artifacts.html -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.11.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.11.1</version>
        </dependency>

        <!--Extent reports-->
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>3.1.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml READ XLSX Microsoft Excel files-->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.0</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.7</version>
        </dependency>



    </dependencies>
    <build>
        <plugins>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration> <!--it allows to compile in java 11 jdk-->
                    <source>11</source>
                    <target>11</target>
                </configuration>

            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <suiteXmlFiles> <!--ADDING to configuration link to xml testNg so it can run tests as described in testng.xml even from command prompt !!! Full PATH!!!-->
                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                      <!-- to run different suites use param(can be used for .bat Jenkins): mvn test -Dsurefire.suiteXmlFiles=src/test/resources/testXml1.xml-->
                     <!--   <suiteXmlFile>C:\Users\viktor\IdeaProjects\TampaTest\testsuites\testNG.xml</suiteXmlFile>-->
                    </suiteXmlFiles>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>


</project>